--- a/src/app/report/components/report-labour-cost/report-labour-cost.component.html
+++ b/src/app/report/components/report-labour-cost/report-labour-cost.component.html
@@ -1,64 +1,65 @@
 
 <h1>Labour cost report</h1>
-
-<table *ngIf="report$ | async">
-  <thead>
-    <tr>      
-      <th 
-        *ngFor="let column of columns; let i = index" 
-        (click)="sort(i)" 
-        [innerHtml]="column.description" 
-        [ngClass]="getColumnClasses(column)"
-      >
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-    <ng-container *ngIf="!columns[0].current; else sortedByName">
-      <tr [@listAnimation]="records.length" *ngFor="let record of records">
-        <ng-container 
-          *ngFor="let cell of columns" 
-          [ngTemplateOutlet]="rowTemplate"
-          [ngTemplateOutletContext]="{ record: record, cell: cell }"
+<ng-container *ngIf="report$ | async">
+  <table *ngIf="!isLoading">
+    <thead>
+      <tr>      
+        <th 
+          *ngFor="let column of columns; let i = index" 
+          (click)="sort(i)" 
+          [innerHtml]="column.description" 
+          [ngClass]="getColumnClasses(column)"
         >
-        </ng-container>
+        </th>
       </tr>
-    </ng-container>
-
-    <ng-template #sortedByName>
-      <tr [@listAnimation]="reportData.directContractors.length" *ngFor="let record of reportData.directContractors">
-        <ng-container 
-          *ngFor="let cell of columns" 
-          [ngTemplateOutlet]="rowTemplate"
-          [ngTemplateOutletContext]="{ record: record, cell: cell }"
-        >
-        </ng-container>
-      </tr>
+    </thead>
+    <tbody>
+      <ng-container *ngIf="!columns[0].current; else sortedByName">
+        <tr [@listAnimation]="columns.length" *ngFor="let record of records">
+          <ng-container 
+            *ngFor="let cell of columns" 
+            [ngTemplateOutlet]="rowTemplate"
+            [ngTemplateOutletContext]="{ record: record, cell: cell }"
+          >
+          </ng-container>
+        </tr>
+      </ng-container>
+  
+      <ng-template #sortedByName>
+        <tr [@listAnimation]="columns.length" *ngFor="let record of reportData.directContractors">
+          <ng-container 
+            *ngFor="let cell of columns" 
+            [ngTemplateOutlet]="rowTemplate"
+            [ngTemplateOutletContext]="{ record: record, cell: cell }"
+          >
+          </ng-container>
+        </tr>
+    
+        <tr class="spacer"></tr>
+    
+        <tr [@listAnimation]="columns.length" *ngFor="let record of reportData.providers">
+          <ng-container 
+            *ngFor="let cell of columns" 
+            [ngTemplateOutlet]="rowTemplate"
+            [ngTemplateOutletContext]="{ record: record, cell: cell }"
+          >
+          </ng-container>        
+        </tr>
+      </ng-template>
   
       <tr class="spacer"></tr>
   
-      <tr [@listAnimation]="reportData.providers.length" *ngFor="let record of reportData.providers">
+      <tr [@listAnimation]="columns.length">
         <ng-container 
           *ngFor="let cell of columns" 
           [ngTemplateOutlet]="rowTemplate"
-          [ngTemplateOutletContext]="{ record: record, cell: cell }"
+          [ngTemplateOutletContext]="{ record: reportData.total, cell: cell }"
         >
-        </ng-container>        
+        </ng-container>
       </tr>
-    </ng-template>
-
-    <tr class="spacer"></tr>
-
-    <tr [@listAnimation]="columns.length">
-      <ng-container 
-        *ngFor="let cell of columns" 
-        [ngTemplateOutlet]="rowTemplate"
-        [ngTemplateOutletContext]="{ record: reportData.total, cell: cell }"
-      >
-      </ng-container>
-    </tr>
-  </tbody>
-</table>
+    </tbody>
+  </table>
+</ng-container>
 <ng-template #rowTemplate let-cell="cell" let-record="record">
   <td [ngClass]="getCellClasses(cell)">{{ getCellData(record, cell) }}</td>
 </ng-template>
