--- a/src/app/report/components/report-labour-cost/report-labour-cost.component.html
+++ b/src/app/report/components/report-labour-cost/report-labour-cost.component.html
@@ -7,9 +7,9 @@
         <th 
           *ngFor="let column of columns; let i = index" 
           (click)="sort(i)" 
-          [innerHtml]="column.description" 
           [ngClass]="getColumnClasses(column)"
         >
+          {{ column.description }}
         </th>
       </tr>
     </thead>
