--- a/src/app/report/components/report-labour-cost/report-labour-cost.component.scss
+++ b/src/app/report/components/report-labour-cost/report-labour-cost.component.scss
@@ -1,4 +1,3 @@
-
 $primary-color: rgb(207, 207, 207);
 $font-awesome: 'Font Awesome\ 5 Free';
 
@@ -10,10 +9,8 @@ $font-awesome: 'Font Awesome\ 5 Free';
 	}
 	color: red;
 	font-family: $font-awesome;	
-}
-
-.body {
-    font-family: 'Open Sans';
+	font-weight: 600; // 600 needed to display font awesome icons
+	position: absolute;
 }
 
 table {
@@ -54,6 +51,15 @@ tr > th {
 
 td, th {
 	padding: 10px 30px;
+	white-space: nowrap;
+}
+
+th {
+	font-weight: 400;
+}
+
+td {
+	font-weight: 500;
 }
 
 .large {
